--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/vite": "^4.1.4",
+    "lucide-vue-next": "^0.503.0",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13"
   },
